<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Registro de Finanças</string>
    <string name="action_settings">Settings</string>
    
    <string name="title_dashboard">Dashboard</string>
    <string name="radape">RF</string>
    
    <string name="campo_obrigatorio">Campo Obrigatório</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="informacoes">Informações</string>
    <string name="sair">Sair</string>
    
    <string name="ic_categoria">Categorias</string>
    <string name="ic_calendario">Calendário</string>
    <string name="ic_financas">Finanças</string>
    <string name="ic_graficos">Gráficos</string>
    <string name="ic_backup">Backup</string>
    <string name="ic_excluir">Excluir dados</string>
    <string name="ic_informacoes">Informações</string>
    <string name="ic_localizacao">Localização</string>
    
    <string name="btn_entrar">Entrar</string>
    <string name="chk_lembrar">Lembrar usuário</string>
    <string name="rot_user">Usuário : </string>
    <string name="rot_senha">Senha : </string>
    <string name="lbl_login">Login</string>
    
    <string name="novo_gasto">Novo Gasto</string>
    <string name="novo_ganho">Novo Ganho</string>
    
    <string name="lbl_financas">Image</string>
    
    <string name="lbl_descricao">Descrição</string>
    <string name="lbl_valor">Valor</string>
    <string name="lbl_categoria">Categoria</string>
    <string name="lbl_parcelas">Parcelas:</string>
    <string name="lbl_parcela">Parcela</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_barra">/</string>
    <string name="lbl_ganho">Ganho a descontar:</string>    
	<string name="lbl_local">Localização:</string>
	<string name="chk_local">Salvar localização</string>
	<string name="lbl_latitude">Latitude:</string>	
	<string name="lbl_longitude">Longitude:</string>	
	<string name="lbl_foto">Foto:</string>
	<string name="lbl_hint_categoria">Digite a nova Categoria</string>
	<string name="lbl_data">Data:</string>
	
    <string name="btn_foto">Tirar Foto</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_voltar">Voltar</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_cancelar">Cancelar</string> 

    <string name="lbl_totalGeral">TOTAL GERAL DO MÊS</string>
    <string name="lbl_ganhos">Total de ganhos:</string>
	<string name="lbl_gastos">Total de gastos:</string>
	<string name="lbl_saldo">Saldo:</string>
	<string name="btn_graficoBarra">Barra</string>
	<string name="btn_graficoPizza">Pizza</string>

</resources>
