<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutGasto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

            <TextView
                android:id="@+id/lblTitulo"
                style="@style/notificaText"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lblDescricao"
                style="@style/notificaText"
                android:text="@string/lbl_descricao"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lblValor"
                style="@style/notificaText"
                android:text="@string/lbl_valor"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lblData"
                style="@style/notificaText"
                android:paddingBottom="10dp"
                android:text="@string/lbl_data"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <ImageView
                    android:id="@+id/ivFoto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true" 
                    android:contentDescription="@string/btn_foto"/>
                                
            </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:measureWithLargestChild="true"
        android:orientation="horizontal"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:paddingTop="0dip" >

        <Button
            android:id="@+id/btnCancelar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancelar" />

        <Button
            android:id="@+id/btnConfirmar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_confirmar" />
    </LinearLayout>

</LinearLayout>