<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/calendar_top" >

        <RelativeLayout
            android:id="@+id/previous"
            android:layout_width="40dip"
            android:layout_height="30dip"
            android:layout_alignParentLeft="true" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/arrow_left" />
        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            style="@style/HomeText"
            android:layout_marginTop="5dip" />

        <RelativeLayout
            android:id="@+id/next"
            android:layout_width="40dip"
            android:layout_height="30dip"
            android:layout_alignParentRight="true" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/arrow_right" />
        </RelativeLayout>
    </RelativeLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="325dp"
        android:layout_gravity="center_horizontal"
        android:listSelector="@android:color/transparent"
        android:numColumns="7"
        android:stretchMode="columnWidth" />
    
    <RelativeLayout
        android:id="@+id/detalheCalendar"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">
        
        <TextView
            android:id="@+id/lblTotalGeralMes"
            style="@style/HomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/lbl_totalGeral" />
        
        <TextView
            android:id="@+id/lblTotalGanhos"
            style="@style/HomeText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/lblTotalGeralMes"
            android:text="@string/lbl_ganhos" />

        <TextView
            android:id="@+id/lblTotalGastos"
            style="@style/HomeText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblTotalGanhos"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/lblTotalGanhos"
            android:text="@string/lbl_gastos" />

        <TextView
            android:id="@+id/lblSaldo"
            style="@style/HomeText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lblTotalGanhos"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/lblTotalGastos"
            android:text="@string/lbl_saldo" />
        
    </RelativeLayout>

</LinearLayout>