<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llRodape"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivCategoria"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickCategorias"
                    android:src="@drawable/ic_categoria" />

                <ImageView
                    android:id="@+id/ivCalendario"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickCalendario"
                    android:src="@drawable/ic_calendario" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvCategoria"
                    style="@style/HomeText"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/ic_categoria" />

                <TextView
                    android:id="@+id/tvCalendario"
                    style="@style/HomeText"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/ic_calendario" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivFinancas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickFinancas"
                    android:src="@drawable/ic_financas" />

                <ImageView
                    android:id="@+id/ivGrafico"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickGraficos"
                    android:src="@drawable/ic_grafico" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvFinancas"
                    style="@style/HomeText"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/ic_financas" />

                <TextView
                    android:id="@+id/tvGrafico"
                    style="@style/HomeText"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/ic_graficos" />
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/LinearLayout6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivBackup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickBackup"
                    android:src="@drawable/ic_backup" />

                <ImageView
                    android:id="@+id/ivExcluir"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickExcluirDados"
                    android:src="@drawable/ic_excluir" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvBackup"
                    style="@style/HomeText"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/ic_backup" />

                <TextView
                    android:id="@+id/tvExcluir"
                    style="@style/HomeText"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/ic_excluir" />
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/LinearLayout8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:onClick="onClickInfo"
                    android:src="@drawable/ic_informacoes" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvInfo"
                    style="@style/HomeText"
                    android:layout_width="0dp"
                    android:layout_marginTop="0dip"
                    android:layout_weight="1"
                    android:text="@string/ic_informacoes" />
            </LinearLayout>
            
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llRodape"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvRodape"
            style="@style/TitleBarText"
            android:layout_width="fill_parent"
            android:background="@color/title_background"
            android:text="@string/radape" />
    </LinearLayout>

</RelativeLayout>